--- a/apps/my-student-app/my-stedent/src/app/components/login/login.component.html
+++ b/apps/my-student-app/my-stedent/src/app/components/login/login.component.html
@@ -46,11 +46,7 @@
                   Login
                 </button>
               </div>
-              <!-- <div class="col-6 text-right">
-                <button type="button" class="btn btn-link px-0">
-                  Forgot password?
-                </button>
-              </div> -->
+              <a routerLink="/register" class="btn btn-link">Register</a>
             </div>
           </form>
         </div>
