--- a/apps/my-student-app/my-stedent/src/app/components/register/register.component.html
+++ b/apps/my-student-app/my-stedent/src/app/components/register/register.component.html
@@ -41,7 +41,7 @@
               <input
                 type="text"
                 name="UserName"
-                [(ngModel)]="model.UserName"
+                [(ngModel)]="model.name"
                 class="form-control sty1"
                 placeholder="Name"
                 required
@@ -68,8 +68,8 @@
               </div>
               <input
                 type="text"
-                name="eamil"
-                [(ngModel)]="model.eamil"
+                name="email"
+                [(ngModel)]="model.email"
                 class="form-control sty1"
                 placeholder="Email"
                 required
