--- a/apps/my-student-app/my-stedent/src/app/components/register/register.component.html
+++ b/apps/my-student-app/my-stedent/src/app/components/register/register.component.html
@@ -158,7 +158,7 @@
                   Cancel
                 </button>
               </div>
-
+              <a routerLink="/login" class="ml-5 btn btn-link">Back To Login</a>
             </div>
           </form>
         </div>
